--- a/pdfreader.ipynb
+++ b/pdfreader.ipynb
@@ -91,8 +91,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e89cabc1-fe1a-4d50-b653-b755339fdaaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def find_first_number(input_string):\n",
+    "    # Use regular expression to find the first occurrence of a numerical value\n",
+    "    match = re.search(r\"\\d+(\\.\\d+)?\", input_string)\n",
+    "    if match:\n",
+    "        return match.group(0)\n",
+    "    else:\n",
+    "        return \"No numerical value found\"\n",
+    "\n",
+    "\n",
+    "input_string = \"Anti-Thyroglobulin Abs 15.88 < 115 IU/m\"\n",
+    "first_number = find_first_number(input_string)\n",
+    "print(first_number)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b032e7ef-4c4b-4344-98b0-376c6f32dd37",
    "metadata": {},
    "outputs": [],
    "source": []
